--- a/lesson/templates/lesson/index.html
+++ b/lesson/templates/lesson/index.html
@@ -24,6 +24,7 @@
         </div>
 
         <!-- Iterate over the lesson_list to display existing lessons -->
+        {% if user.is_authenticated %}
         {% for lesson in lesson_list %}
         <div class="col-md-4">
             <div class="card mb-4">
@@ -42,6 +43,7 @@
             </div>
         </div>
         {% endfor %}
+        {% endif %}
     </div>
 </div>
 {% if is_paginated %}
