Style updates Cloudinary image updates

--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -6,7 +6,11 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-12 col-md-4 text-center">
-            <img src="{% static 'images/Jeff.jpg' %}" width="50%">
+            {% if "placeholder" in about.profile_image.url %}
+            <img src="{% static 'images/Jeff.jpg' %}" width="50%" alt="placeholder image">
+            {% else %}
+            <img src="{{ about.profile_image.url }}" width="50%" alt="{{ about.title }}">
+            {% endif %}
         </div>
         <div class="col-12 col-md-8">
             <h2>{{ about.title }}</h2>
@@ -15,9 +19,9 @@
     </div>
     <div class="row">
         <div class="col text-right">
-          <!-- Updated on field goes in here -->
-    
-          <p class="text-end"><em>Updated on: {{ about.updated_on }}</em></p>
+            <!-- Updated on field goes in here -->
+
+            <p class="text-end"><em>Updated on: {{ about.updated_on }}</em></p>
         </div>
     </div>
     <div class="row justify-content-center">
@@ -34,7 +38,7 @@
             <form method="POST"">
                 {{ collaborate_form | crispy }}
                 {% csrf_token %}
-                <button class="btn btn-secondary" type="submit">Submit</button>
+                <button class=" btn btn-secondary" type="submit">Submit</button>
             </form>
         </div>
     </div>
