--- a/lesson/templates/lesson/lesson_detail.html
+++ b/lesson/templates/lesson/lesson_detail.html
@@ -24,7 +24,12 @@
                 </div>
             </div>
             <div class="d-none d-md-block col-md-6 masthead-image">
-                <img src="{% static 'images/AmazingTutors.jpg' %}" class="scale" alt="placeholder">
+                {% if "placeholder" in lesson.featured_image.url %}
+                <img src="{% static 'images/AmazingTutors.jpg' %}" class="scale" alt="placeholder image">
+                {% else %}
+                <img src="{{ lesson.featured_image.url }}" class="scale" alt="{{ lesson.title }}">
+                {% endif %}
+
             </div>
         </div>
     </div>
