--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 .brand {
-    font-family: Lato, sans-serif;
+    font-family: "Caveat", sans-serif;
     font-size: 1.4rem;
     font-weight: 700;
     color: #4A4A4F;
@@ -43,7 +43,7 @@ body {
     bottom: 5%;
     min-width: 30%;
     left: -2px;
-    background-color: #188181;
+    background-color: #8236f5;
 }
 
 .scale {
@@ -124,6 +124,8 @@ body {
 .btn-edit {
     background-color: #188181;
     color: #fff;
+    display: inline-block;
+    /* Ensure the button is visible */
 }
 
 .btn-signup:hover,
