--- a/lesson/templates/lesson/index.html
+++ b/lesson/templates/lesson/index.html
@@ -71,5 +71,5 @@
 <!-- index.html content ends here -->
 {% endblock %}
 {% block copyright %}
-&copy; Copyright 2025 Jeff Chen.
+AmazingTutors &copy; Copyright 2025
 {% endblock %}
