--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -3,10 +3,18 @@ body {
 }
 
 .brand {
-    font-family: Lato, sans-serif;
+    font-family: "Caveat", sans-serif;
     font-size: 1.4rem;
     font-weight: 700;
     color: #4A4A4F;
+}
+
+.footer {
+    background-color: #445261;
+    color: white;
+    padding: 10px;
+    text-align: center;
+    font: 1 rem "Caveat", sans-serif;
 }
 
 .red-o {
@@ -43,7 +51,7 @@ body {
     bottom: 5%;
     min-width: 30%;
     left: -2px;
-    background-color: #188181;
+    background-color: #8236f5;
 }
 
 .scale {
@@ -70,6 +78,7 @@ body {
     background-color: #445261;
     color: white;
     position: relative;
+    padding-bottom: 50px; /* Add padding to accommodate buttons */
 }
 
 .masthead-image {
@@ -89,6 +98,14 @@ body {
     -moz-transform: skew(15deg);
     transform: skew(15deg);
     z-index: 100;
+}
+
+.masthead-buttons {
+    position: relative;
+    top: 2vh;
+    left: 10px;
+    display: flex;
+    gap: 10px;
 }
 
 .lesson-link {
@@ -115,6 +132,8 @@ body {
 .btn-edit {
     background-color: #188181;
     color: #fff;
+    display: inline-block;
+    /* Ensure the button is visible */
 }
 
 .btn-signup:hover,
@@ -163,3 +182,50 @@ body {
 .faded {
     opacity: 0.5;
 }
+
+/* test question*/
+.testA {
+    background-color: #f7a072;
+    border-radius: 10px;
+}
+
+/* assignment with duedate */
+.testB {
+    background-color: #ff6392;
+    border-radius: 10px;
+}
+
+/* tutor discussion */
+.discussionA {
+    background-color: #00bbf9;
+    border-radius: 10px;
+    border: 1px solid white;
+}
+
+/* student discussion */
+.discussionB {
+    background-color: #a9def9;
+    border-radius: 10px;
+    border: 1px solid white;
+}
+
+/* tutor answer */
+.answerA {
+    background-color: #e4c1f9; 
+    border-radius: 10px;
+    border: 1px solid white;
+}
+
+/* student answer */
+.answerB {
+    background-color: #d0f4de;
+    border-radius: 10px;
+    border: 1px solid white;
+}
+
+
+.disabled {
+    pointer-events: none;
+    opacity: 0.6;
+}
+
