--- a/lesson/templates/lesson/answer_edit.html
+++ b/lesson/templates/lesson/answer_edit.html
@@ -7,6 +7,7 @@
     <div class="row justify-content-center">
         <div class="col-12 col-md-6 text-center">
             <h3>{{ question.body }}</h3>
+            <h3>Due Date: {{ question.due_date }}</h3>
             <p class="text-start"> .
             </p>
 
