--- a/lesson/templates/lesson/lesson_edit.html
+++ b/lesson/templates/lesson/lesson_edit.html
@@ -12,7 +12,7 @@
 
             <!-- add your form here. Your submit button should 
                                 have the classes of btn, btn-secondary -->
-            <form method="POST"">
+            <form method="POST">
                 {{ lesson_form | crispy }}
                 {% csrf_token %}
                 <button class=" btn btn-secondary" type="submit">Submit</button>
