--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -10,11 +10,13 @@ body {
 }
 
 .footer {
+    font-family: 1rem "Caveat", sans-serif;
+    font-weight: 700;
     background-color: #445261;
     color: white;
     padding: 10px;
     text-align: center;
-    font: 1 rem "Caveat", sans-serif;
+    
 }
 
 .red-o {
