--- a/lesson/templates/lesson/index.html
+++ b/lesson/templates/lesson/index.html
@@ -10,11 +10,6 @@
             <div class="card mb-4">
                 <div class="card-body">
                     <div class="image-container">
-                        {% if "placeholder" in post.featured_image.url %}
-                        <img class="card-img-top" src="{% static 'images/default.jpg' %}" alt="placeholder image">
-                        {% else %}
-                        <img class="card-img-top" src=" {{ post.featured_image.url }}" alt="{{ post.title }}">
-                        {% endif %}
                         <div class="image-flash">
                             <p class="author">Tutor: none</p>
                         </div>
@@ -36,6 +31,11 @@
             <div class="card mb-4">
                 <div class="card-body">
                     <div class="image-container">
+                        {% if "placeholder" in lesson.featured_image.url %}
+                        <img class="card-img-top" src="{% static '/images/AmazingTutors.jpg' %}" alt="placeholder image">
+                        {% else %}
+                        <img class="card-img-top" src=" {{ lesson.featured_image.url }}" alt="{{ lesson.title }}">
+                        {% endif %}
                         <div class="image-flash">
                             <p class="author">Tutor: {{ lesson.author }}</p>
                         </div>
@@ -66,7 +66,7 @@
     </ul>
 </nav>
 {% endif %}
-</div>
+
 
 <!-- index.html content ends here -->
 {% endblock %}
