--- a/lesson/templates/lesson/lesson_detail.html
+++ b/lesson/templates/lesson/lesson_detail.html
@@ -39,9 +39,9 @@
     <div class="row">
         <div class="col card mb-4 mt-3 left top">
             <div class="card-body">
-                <p class="card-text">
+                <div class="card-text">
                     {{ lesson.content | safe }}
-                </p>
+                </div>
                 <hr />
                 <!-- Displaying Note of the User -->
                 {% if user_note %}
@@ -78,7 +78,7 @@
                     <div class="modal-dialog">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <!-- <h5 class="modal-title" id="addNoteModalLabel{{ lesson.id }}">Add Note</h5> -->
+                                <h5 class="modal-title" id="addNoteModalLabel{{ lesson.id }}">Add Note</h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal"
                                     aria-label="Close"></button>
                             </div>
@@ -250,7 +250,6 @@
 
 
         </div>
-    </div>
-</div>
 
-{% endblock content %}
+
+        {% endblock content %}
