--- a/templates/base.html
+++ b/templates/base.html
@@ -114,9 +114,11 @@
     <!-- Footer -->
     <footer class=" footer mt-auto py-3 dark-bg">
         <p class="m-0 text-center text-white">{% block copyright %} {% endblock %}</p>
-        <p class="m-0 text-center text-white">Follow us: <i class="fab fa-facebook-square ms-3"></i>
-            <i class="fab fa-linkedin ms-3"></i>
-            <i class="fa-brands fa-x-twitter"></i>
+        <p class="m-0 text-center text-white">Follow us: 
+            <a href="https://www.linkedin.com/in/jeff-chienchou-chen-/" target="_blank" class="ms-3 text-white">
+                <i class="fab fa-linkedin"></i>
+            </a>
+            <i class="fab fa-facebook-square ms-3"></i>
             <i class="fab fa-instagram-square ms-3"></i>
             <i class="fab fa-youtube-square ms-3"></i>
         </p>
