--- a/lesson/templates/lesson/answer_edit.html
+++ b/lesson/templates/lesson/answer_edit.html
@@ -3,6 +3,7 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
+{% if user.is_authenticated and user == answer.owner %}
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-12 col-md-6 text-center">
@@ -46,6 +47,17 @@
         </div>
     </div>
 </div>
+{% else %}
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-12 col-md-6 text-center">
+            <h3>You need to be logged in and the owner to edit the answer.</h3>
+            <p>Please log in or register to continue.</p>
+        </div>
+    </div>
+
+
+
 {% endblock content %}
 
 {% block extras %}
