--- a/lesson/templates/lesson/lesson_create.html
+++ b/lesson/templates/lesson/lesson_create.html
@@ -3,6 +3,7 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
+{% if user.is_authenticated %}
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-12 col-md-6">
@@ -20,4 +21,14 @@
         </div>
     </div>
 </div>
+{% else %}
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-12 col-md-6 text-center">
+            <h3>You need to be logged in to create a lesson.</h3>
+            <p>Please log in or register to continue.</p>
+        </div>
+    </div>
+</div>
+{% endif %}
 {% endblock content %}
