Fix answer_edit.html and lesson_edit.html

--- a/lesson/templates/lesson/lesson_edit.html
+++ b/lesson/templates/lesson/lesson_edit.html
@@ -3,7 +3,7 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-{% if user.is_authenticated and user == lesson.owner %}
+{% if user.is_authenticated and user == lesson.author %}
 <div class="container">
 
     <div class="row justify-content-center">
